--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
   color: orange;
 }
 
-section {
+.felxible-container {
   display: flex;
 }
 
@@ -48,4 +48,40 @@ section {
   background-image: url(Images/dream-bg.png);
   background-repeat: no-repeat;
   background-position: right;
+}
+
+.expreince-item {
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 20px;
+  box-shadow: 10px 10px 30px gray;
+  border-radius: 10px;
+  border -left: 10px;
+}
+
+.experience-area {
+  background-image: url(Images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+#web-developer {
+  border-left: 7px solid;
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+}
+
+#full-stack-experience {
+  border-left: 7px solid;
+  border-image: linear-gradient(salmon, rgb(182, 20, 125));
+  border-image-slice: 1;
+}
+
+footer p {
+  text-align: center;
 }
